macros/tests/entry/fail/extra.stderr
error: Unexpected argument: `extra`
 --> tests/entry/fail/extra.rs:5:58
  |
5 | fn e_main(_handle: EfiHandle, _table: SystemTable<Boot>, extra: (), extra2: ()) -> Result<()> {
  |                                                          ^^^^^^^^^

error: Unexpected argument: `extra2`
 --> tests/entry/fail/extra.rs:5:69
  |
5 | fn e_main(_handle: EfiHandle, _table: SystemTable<Boot>, extra: (), extra2: ()) -> Result<()> {
  |                                                                     ^^^^^^^^^^

error[E0061]: this function takes 4 arguments but 2 arguments were supplied
 --> tests/entry/fail/extra.rs:5:4
  |
4 | #[entry]
  | -------- two arguments of type `()` and `()` are missing
5 | fn e_main(_handle: EfiHandle, _table: SystemTable<Boot>, extra: (), extra2: ()) -> Result<()> {
  |    ^^^^^^
  |
note: function defined here
 --> tests/entry/fail/extra.rs:5:4
  |
5 | fn e_main(_handle: EfiHandle, _table: SystemTable<Boot>, extra: (), extra2: ()) -> Result<()> {
  |    ^^^^^^ ------------------  -------------------------  ---------  ----------
help: provide the arguments
  |
4 | e_main(#[entry], #[entry], (), ())
  |
